--- a/icecreamshop/shop/templates/shop/flavors/index.html
+++ b/icecreamshop/shop/templates/shop/flavors/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% load static %}
-  <link rel="stylesheet" href="{% static 'polls/style.css' %}">
+  <link rel="stylesheet" href="{% static 'shop/styles.css' %}">
   <title>Document</title>
 </head>
 
@@ -17,8 +17,9 @@
     {% endfor %}
   </ul>
   {% else %}
-  <p>No polls are available.</p>
+  <p>No flavors have been added.</p>
   {% endif %}
+  <a href="{% url "shop:index" %}">Home</a>
 </body>
 
 </html>
