Add rendering for Treats Index

--- a/icecreamshop/shop/templates/shop/index.html
+++ b/icecreamshop/shop/templates/shop/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <ul>
+  <h3>Welcome to the Ice Cream Shop!</h3>
     <a href="{% url 'shop:flavors' %}">Flavors</a>
-    {% comment %} <li><a href="{% url 'shop:treats' %}">Link</a></li> {% endcomment %}
-  </ul>
+    <br />
+    <a href="{% url 'shop:treats' %}">Treats</a>
 </body>
 
 </html>
