--- a/icecreamshop/shop/templates/shop/flavors/index.html
+++ b/icecreamshop/shop/templates/shop/flavors/index.html
@@ -6,16 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% load static %}
   <link rel="stylesheet" href="{% static 'shop/styles.css' %}">
-  <title>Document</title>
+  <title>Flavors - Ice Cream Shop</title>
 </head>
 
 <body>
+  <h2>Flavors - Ice Cream Shop</h2>
   {% if flavors_list %}
     {% for flavor in flavors_list %}
     <li><a href="{% url "shop:flavors/detail" flavor.id %}">{{ flavor.flavor_name }}</a></li>
     {% endfor %}
   {% else %}
-  <p>No flavors have been added.</p>
+  <p>No flavors have been added yet.</p>
   {% endif %}
   <a href="{% url "shop:index" %}">Home</a>
 </body>
