--- a/icecreamshop/shop/templates/shop/index.html
+++ b/icecreamshop/shop/templates/shop/index.html
@@ -10,10 +10,38 @@
 </head>
 
 <body>
-  <h3>Welcome to the Ice Cream Shop!</h3>
-    <a href="{% url 'shop:flavors' %}">Flavors</a>
-    <br />
-    <a href="{% url 'shop:treats' %}">Treats</a>
+  <h2>Ice Cream Shop</h2>
+
+  <div id="homeContent">
+    <div>
+      <h4>Treats</h4>
+      {% comment %} @if (Model["treats"].Length == 0)
+      {
+        <p>No treats have been added yet.</p>
+      }
+        @foreach (Treat trt in Model["treats"])
+        {
+          <li>@Html.ActionLink(@trt.TreatName, "Details", "Treats", new { id = @trt.TreatId })</li>
+        }
+      <p>@Html.ActionLink("Manage Treats", "Index", "Treats")</p> {% endcomment %}
+      <a href="{% url 'shop:treats' %}">Shop Treats</a>
+    </div>
+  
+    <div>
+      <h4>Flavors</h4>
+      {% comment %} @if (Model["flavors"].Length == 0)
+      {
+        <p>No flavors have been added yet.</p>
+      }
+        @foreach (Flavor flvr in Model["flavors"])
+        {
+          <li>@Html.ActionLink(@flvr.FlavorName, "Details", "Flavors", new { id = @flvr.FlavorId })</li>
+        }
+      <p>@Html.ActionLink("Manage Flavors", "Index", "Flavors")</p> {% endcomment %}
+      <a href="{% url 'shop:flavors' %}">Shop Flavors</a>
+    </div>
+  </div>
+    
 </body>
 
 </html>
