--- a/icecreamshop/shop/templates/shop/flavors/index.html
+++ b/icecreamshop/shop/templates/shop/flavors/index.html
@@ -13,11 +13,12 @@
   <h2>Flavors - Ice Cream Shop</h2>
   {% if flavors_list %}
     {% for flavor in flavors_list %}
-    <li><a href="{% url "shop:flavors/detail" flavor.id %}">{{ flavor.flavor_name }}</a></li>
+    <a href="{% url "shop:flavors/detail" flavor.id %}">{{ flavor.flavor_name }}</a><br />
     {% endfor %}
   {% else %}
   <p>No flavors have been added yet.</p>
   {% endif %}
+  <br /><br />
   <a href="{% url "shop:index" %}">Home</a>
 </body>
 
