--- a/icecreamshop/shop/templates/shop/treats/index.html
+++ b/icecreamshop/shop/templates/shop/treats/index.html
@@ -13,11 +13,12 @@
   <h2>Treats - Ice Cream Shop</h2>
   {% if treats_list %}
     {% for treat in treats_list %}
-    <li><a href="{% url "shop:treats/detail" treat.id %}">{{ treat.treat_name }}</a></li>
+    <a href="{% url "shop:treats/detail" treat.id %}">{{ treat.treat_name }}</a><br />
     {% endfor %}
   {% else %}
   <p>No treats have been added yet.</p>
   {% endif %}
+  <br /><br />
   <a href="{% url "shop:index" %}">Home</a>
 </body>
 
