--- a/icecreamshop/shop/templates/shop/base.html
+++ b/icecreamshop/shop/templates/shop/base.html
@@ -1,30 +1,36 @@
 <html> 
-<head> 
-</head> 
-<body> 
-  <header> 
-    <div id="header">
-      <h1>Pierre's Sweet and Savory Treats</h1>
-      <div id="headerNavDiv">
-        <a href="{% url "shop:index"%}">Home</a>
-        <a href="{% url "shop:treats"%}">Treats</a>
-        <a href="{% url "shop:flavors"%}">Flavors</a>
-        <div>
-          <a href="{% url "admin"%}">Admin Login</a>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'shop/styles.css' %}">
+    {% block title %} 
+    {% endblock %}
+  </head>
+  <body>
+    <header>
+      <div id="header">
+        <h1>Django's Ice Cream - Scoops that Sssatisfy!</h1>
+        <div id="headerNavDiv">
+          <a href="{% url "shop:index"%}">Home</a>
+          <a href="{% url "shop:treats"%}">Treats</a>
+          <a href="{% url "shop:flavors"%}">Flavors</a>
+          <div>
+            <a href="{% url "admin:index"%}">Admin Login</a>
+          </div>
         </div>
       </div>
-    </div>
-  </header> 
-  {% block content %} 
-  {% endblock %} 
-  <footer> 
-    <div id="footer">
-      <p>
-          ©2024 Pierre's Sweet and Savory Treats
-          <br />
-          Web Design by <a href="https://github.com/mejia-dev" target="_blank" rel="noopener noreferrer">github.com/mejia-dev</a><br />
-      </p>
-  </div>
-  </footer> 
-</body> 
+    </header>
+    {% block content %} 
+    {% endblock %} 
+    <footer>
+      <div id="footer">
+        <p>
+            ©2024 Django's Ice Cream
+            <br />
+            Web Design by <a href="https://github.com/mejia-dev" target="_blank" rel="noopener noreferrer">github.com/mejia-dev</a><br />
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
