--- a/icecreamshop/shop/templates/shop/flavors/detail.html
+++ b/icecreamshop/shop/templates/shop/flavors/detail.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'shop/styles.css' %}">
-  <title>{{ flavor.flavor_name }}- Treats - Ice Cream Shop</title>
-</head>
-<body>
-  <h1>{{ flavor.flavor_name }}</h1>
-  
-  <p>Price of {{ flavor.flavor_name }}: {{ flavor.price }}</p>
-  
+
+{% extends "../base.html" %}
+  {% block title %}
+    <title>{{ flavor.flavor_name }}- Treats - Ice Cream Shop</title>
+  {% endblock %}
+  {% block content %}
+    <h2>{{ flavor.flavor_name }}</h2>
+    <p>Price of {{ flavor.flavor_name }}: ${{ flavor.price }}</p>
     <p><strong>Available {{ flavor.flavor_name }}-Flavored Treats:</strong>
       {% if flavor.treat_set.all %}
         {% for treat in flavor.treat_set.all %}
@@ -21,7 +15,5 @@
       <p>There are no treats in {{ flavor.flavor_name }} flavor yet.</p>
     {% endif %}
     </p>
-
   <a href="{% url 'shop:flavors' %}">Back to All Flavors</a>
-</body>
-</html>
+  {% endblock %}
