--- a/icecreamshop/shop/templates/shop/base.html
+++ b/icecreamshop/shop/templates/shop/base.html
@@ -4,8 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
     <link rel="stylesheet" href="{% static 'shop/styles.css' %}">
-    {% block title %} 
-    {% endblock %}
+    <title>{% block title %}{% endblock %} - Ice Cream Shop</title>
   </head>
   <body>
     <header>
