--- a/icecreamshop/shop/templates/shop/treats/detail.html
+++ b/icecreamshop/shop/templates/shop/treats/detail.html
@@ -1,27 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'shop/styles.css' %}">
-  <title>{{ treat.treat_name }}- Treats - Ice Cream Shop</title>
-</head>
-<body>
-  <h1>{{ treat.treat_name }}</h1>
-  
-  <p>Price of {{ treat.treat_name }}: {{ treat.price }}</p>
 
-  <p><strong>Available Flavors of {{ treat.treat_name }}:</strong>
-  {% if treat.flavors.all.count > 0 %}
-      {% for flavor in treat.flavors.all %}
+
+{% extends "../base.html" %}
+  {% block title %}
+    {{ treat.treat_name }}
+  {% endblock %}
+  {% block content %}
+    <h2>{{ treat.treat_name }}</h2>
+    <p>Price of {{ treat.treat_name }}: {{ treat.price }}</p>
+    <p><strong>Available Flavors of {{ treat.treat_name }}:</strong>
+      {% if treat.flavors.all.count > 0 %}
+        {% for flavor in treat.flavors.all %}
           <li><a href="{% url "shop:flavors/detail" flavor.id %}">{{ flavor.flavor_name }}</a></li><br />
-      {% endfor %}
-  {% else %}
-    <p> {{ treat.treat_name }} does not have any flavors yet.</p>
-  {% endif %}
+        {% endfor %}
+      {% else %}
+        <p> {{ treat.treat_name }} does not have any flavors yet.</p>
+      {% endif %}
   </p>
-
   <a href="{% url 'shop:treats' %}">Back to All Treats</a>
-</body>
-</html>
+  {% endblock %}
