--- a/icecreamshop/shop/templates/shop/flavors/detail.html
+++ b/icecreamshop/shop/templates/shop/flavors/detail.html
@@ -1,7 +1,7 @@
 
 {% extends "../base.html" %}
   {% block title %}
-    <title>{{ flavor.flavor_name }}- Treats - Ice Cream Shop</title>
+    {{ flavor.flavor_name }}
   {% endblock %}
   {% block content %}
     <h2>{{ flavor.flavor_name }}</h2>
