--- a/icecreamshop/shop/templates/shop/base.html
+++ b/icecreamshop/shop/templates/shop/base.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
     <link rel="stylesheet" href="{% static 'shop/styles.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'shop/images/favicon.ico' %}" >
     <title>{% block title %}{% endblock %} - Ice Cream Shop</title>
   </head>
   <body>
